--- a/styles.css
+++ b/styles.css
@@ -419,24 +419,30 @@ h3 {
     .bento-grid {
         display:grid;
         grid-gap:30px;
-        grid-template-columns:repeat(3, 1fr);
-        grid-template-rows:repeat(1, 1fr);
-        height:300px;
+        grid-template-columns:repeat(6, 1fr);
+        grid-template-rows:repeat(2, 1fr);
+        min-height: 500px;
+
         @media(max-width:1024px) {
-            grid-template-rows: repeat(8, 1fr);
+            grid-template-columns: repeat(2, 1fr);
+            grid-template-rows: repeat(3, 1fr);
+            min-height: 500px;
         }
+
         @media(max-width:768px) {
             display:flex;
             flex-direction:column;
             gap:30px;
             height:auto;
         }
+
         .bento-item {
             padding:30px;
             background-color:var(--base-100);
             border-radius:15px;
             position:relative;
             overflow:hidden;
+
             figcaption {
                 position:absolute;
                 bottom:0;
@@ -454,7 +460,7 @@ h3 {
                 position:absolute;
                 top:0;
                 left:0;
-                height:100%;
+                width: 100%;
                 object-fit:cover;
                 transition:ease 1s all;
             }
@@ -471,47 +477,49 @@ h3 {
                 height:240px;
             }
             &:nth-child(1){
-                grid-column: span 1.5;
+                grid-column: span 2;
                 grid-row: span 1;
                 @media(max-width:1024px) {
-                    grid-column: span 5;
-                    grid-row: span 2;
+                    grid-column: span 1;
+                    grid-row: span 1;
                 }
             }
             &:nth-child(2){
-                grid-column: span 1.6;
+                grid-column: span 2;
                 grid-row: span 1;
                 @media(max-width:1024px) {
-                    grid-column: span 5;
-                    grid-row: span 2;
+                    grid-column: span 1;
+                    grid-row: span 1;
                 }
             }
             
             &:nth-child(3){
-                grid-column: span 1.6;
+                grid-column: span 2;
                 grid-row: span 1;
                 @media(max-width:1024px) {
-                    grid-column: span 5;
+                    grid-column: span 1;
+                    grid-row: span 1;
+                }
+            }
+            
+            &:nth-child(4){
+                grid-column: span 3;
+                grid-row: span 1;
+                @media(max-width:1024px) {
+                    grid-column: span 1;
+                    grid-row: span 1;
+                }
+            }
+            
+            &:nth-child(5){
+                grid-column: span 3;
+                grid-row: span 1;
+                @media(max-width:1024px) {
+                    grid-column: span 2;
                     grid-row: span 2;
                 }
             }
             /*
-            &:nth-child(4){
-                grid-column: span 1;
-                grid-row: span 1;
-                @media(max-width:1024px) {
-                    grid-column: span 2;
-                    grid-row: span 4;
-                }
-            }
-            &:nth-child(5){
-                grid-column: span 2;
-                grid-row: span 1;
-                @media(max-width:1024px) {
-                    grid-column: span 3;
-                    grid-row: span 2;
-                }
-            }
             &:nth-child(6){
                 grid-column: span 5;
                 grid-row: span 3;
