--- a/styles.css
+++ b/styles.css
@@ -37,9 +37,9 @@ body {
     font-optical-sizing: auto;
     font-style: normal;
     font-size: 20px;
-    /*
-    padding-bottom:10px;
-    */
+    
+    padding-top:90px;
+    
 }
 
 a {
@@ -51,16 +51,18 @@ a {
 }
 
 header {
-    /*
-    padding-top:10px;
-    padding-bottom:10px;
-    */
-    padding: 10px 20px;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 1000;
+    padding: 0px 20px;
     display:flex;
     justify-content: space-between;
     max-width: 1440px;
-    margin: auto;
+    margin: 0 auto;
     border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+    background-color: white;
 
     .logo-holder {
         display:flex;
