--- a/styles.css
+++ b/styles.css
@@ -59,8 +59,6 @@ header {
     padding: 0px 20px;
     display:flex;
     justify-content: space-between;
-    max-width: 1440px;
-    margin: 0 auto;
     border-bottom: 1px solid rgba(0, 0, 0, 0.1);
     background-color: white;
 
@@ -195,7 +193,10 @@ section {
             color: var(--base-100);
         }
     }
+
 }
+
+
 
 h1 {
     font-size: 64px;
@@ -376,6 +377,8 @@ h3 {
             padding:30px;
             border-radius: 30px;
             flex: 1;
+            display: flex;
+            flex-direction: column;
             h3 {
                 margin-top: 20px;
                 margin-bottom:10px;
@@ -413,6 +416,40 @@ h3 {
                     }
                 }
             }
+
+            a {
+                color: var(--blu)
+            }
+
+            a.linkToStudyAbroad {
+                display: inline-block;
+                margin-left: auto;
+                margin-right: auto;
+                text-align: center;
+                color: var(--blu);
+                position: relative;
+                text-decoration: none;
+                cursor:pointer;
+                font-family: 'Poppins', sans-serif;
+                font-weight: 700;
+            }
+            a.linkToStudyAbroad::before {
+                content: '';
+                position: absolute;
+                width: 100%;
+                height: 4px;
+                border-radius: 4px;
+                background-color: var(--blu);
+                bottom: 0;
+                left: 0;
+                transform-origin: right;
+                transform: scaleX(0);
+                transition: transform .3s ease-in-out;
+            }
+            a.linkToStudyAbroad:hover::before {
+                transform-origin: left;
+                transform: scaleX(1);
+}
         }
     }
 }
